<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/book_photo"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ScrollView>

    <View
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"></View>
    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/empty_view"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_email"
        android:hint="@string/hint_password"
        android:backgroundTint="@color/white"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        />
    <TextView
        android:id="@+id/forgot_password_link"
        android:text="@string/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="23dp"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        />
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_link"
        android:padding="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/login"
        />
    <TextView
        android:id="@+id/make_acount_link"
        android:text="@string/other_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="23dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        />
    <TextView
        android:id="@+id/make_google_link"
        android:text="@string/other_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/make_acount_link"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="23dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        />
    />
</RelativeLayout>