<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/signup_photo"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        />
    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_image"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        />
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_email"
        android:hint="@string/hint_email"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        />
    <TextView
        android:id="@+id/register_login_link"
        android:text="@string/other_text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_password"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="23dp"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_login_link"
        android:padding="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/register"
        />

</RelativeLayout>